<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimens_8dp"
    android:layout_marginVertical="@dimen/dimens_8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/dimens_8dp"
    app:cardElevation="@dimen/dimens_4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_item"
            android:scaleType="centerCrop"
            android:src="@drawable/burger" />

        <TextView
            android:id="@+id/tvItemTittle"
            style="@style/Text.StyleItemTittle"
            android:text="@string/text_burgers"
            android:textAllCaps="true"
            android:textColor="@color/text_title_color"
            android:textSize="@dimen/dimens_text_14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemDescription"
            style="@style/Text.StyleItemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_item_description"
            android:textColor="@color/description_item_666666_color"
            android:textSize="@dimen/dimens_text_12sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>