<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimens_8dp"
    android:layout_marginVertical="@dimen/dimens_8dp">

    <TextView
        android:id="@+id/tvItemIngredientDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_string_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf ="@+id/tvItemIngredientQuantity"
        />

    <TextView
        android:id="@+id/tvItemIngredientQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_string_quantity"
        style="@style/Text.StyleItem14"
        app:layout_constraintEnd_toStartOf="@id/tvItemIngredientUnitOfMeasure"
        app:layout_constraintTop_toTopOf="@+id/tvItemIngredientDescription"
        app:layout_constraintBottom_toBottomOf="@id/tvItemIngredientDescription"
        />

    <TextView
        android:id="@+id/tvItemIngredientUnitOfMeasure"
        android:text="@string/default_string_unit_of_measure"
        style="@style/Text.StyleItem14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dimens_8dp"
        app:layout_constraintTop_toTopOf="@+id/tvItemIngredientDescription"
        app:layout_constraintBottom_toBottomOf="@id/tvItemIngredientDescription"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/mdLineIngredient"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1dp"
        app:dividerColor="@color/line_item_color"
        app:layout_constraintTop_toBottomOf="@id/tvItemIngredientDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>